--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,569 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+
 }
+
+
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  width: 100%;
+  height: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.fotodiv {
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("https://www.gokalaf.com/wp-content/uploads/2022/03/resim_2022-03-24_161957.png ");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navbar-light .navbar-brand, .nav-link active, .nav-link {
+  color: white !important;
+}
+
+.navbar-light .navbar-brand, .nav-link active, .nav-link:hover {
+  color: #fed92e !important;
+
+}
+
+.tatsu-inline-text-inner span {
+  width: 100%;
+  text-align: left;
+  color: #fed92e;
+
+}
+
+.tatsu-inline-text-inner h1 {
+  font-family: "Poppins", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  text-transform: none;
+  font-size: 85px;
+  line-height: 92px;
+  letter-spacing: -0.2px;
+  color: #fff;
+  margin-top: 20rem;
+
+}
+
+.form-control {
+  display: block;
+  width: 100%;
+  padding: 0.375rem 0.75rem;
+  font-size: 0.9rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  background-color: transparent;
+  background-clip: padding-box;
+  border: 0.5px solid;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  /* appearance: none; */
+  border-radius: 0.35rem;
+  transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+}
+
+
+.btn-outline-success {
+  color: #ffffff;
+  border-color: #fffefe;
+  border-radius: 0.35rem;
+  border: 0.5px solid;
+}
+
+.btn:hover {
+
+  background-color: transparent;
+  border-color: #fed92e;
+}
+
+.iletisim2 {
+  font-size: 2.3rem;
+  margin-bottom: 0.5rem;
+  margin-left: 1rem;
+
+}
+
+
+.iletisim {
+  font-size: 2.3rem;
+
+}
+
+.iletisim2 a {
+  text-decoration: none;
+  margin: auto !important;
+  color: #fff;
+}
+
+.iletisim a {
+  text-decoration: none;
+  margin: auto !important;
+  color: #fff;
+}
+
+.insta:hover {
+  color: purple;
+}
+
+.wp:hover {
+  color: #38bf4b;
+  text-decoration: none;
+}
+
+.mail:hover {
+  color: red;
+}
+
+.btn-outline-warning {
+  margin-top: 4vh;
+  width: 20vh;
+  height: 5vh;
+  background-color: #fed92e;
+  color: #000000;
+  border-width: 1px;
+  border-color: #fed92e;
+  border-radius: 50px;
+  font-family: "Poppins", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+  font-weight: 500;
+  font-style: normal;
+  font-size: 15px;
+  line-height: 16px;
+  position: relative;
+  display: inline-block;
+}
+
+.btn-outline-warning:hover {
+  background-color: #000000;
+  color: #fed92e;
+
+}
+
+.main-div {
+  background-size: cover;
+  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("https://assets.website-files.com/5e0fdda1c7ec61ff259e5d42/5e1e85c20263e774f3a8b2d0_hero.jpg");
+  background-repeat: no-repeat;
+  background-position: 100% 0px;
+  height: 100vh;
+  width: 100%;
+}
+
+.tatsu-inline-text-inner2 span {
+  width: 100%;
+
+  color: #fed92e;
+
+}
+
+.tatsu-inline-text-inner2 h1 {
+  font-family: "Poppins", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  text-transform: none;
+  text-align: right;
+  font-size: 54px;
+  margin-left: auto;
+  width: 70%;
+  line-height: 90px;
+  letter-spacing: -0.2px;
+  color: #fff;
+}
+
+.tatsu-inline-text-inner2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 2rem;
+  justify-content: center;
+  margin-top: 7rem;
+
+}
+
+.tatsu-inline-text-inner2 p {
+  color: #ffffff;
+  width: 54%;
+  font-size: 24px;
+  margin-top: 0rem;
+  margin-left: auto;
+  font-weight: 500;
+}
+
+.btn-outline-warning2 {
+  margin-top: 3vh;
+  margin-left: 100vh;
+  width: 20vh;
+  height: 5vh;
+  background-color: #fed92e;
+  color: #000000;
+  border-width: 1px;
+  border-color: #fed92e;
+  border-radius: 50px;
+  font-family: "Poppins", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+  font-weight: 500;
+  font-style: normal;
+  font-size: 15px;
+  line-height: 16px;
+  position: relative;
+  display: inline-block;
+}
+
+.btn-outline-warning2:hover {
+  background-color: #000000;
+  color: #fed92e;
+
+}
+
+.btn-outline-warning-grs {
+  margin-left: 1rem;
+  width: 10vh;
+  height: 5vh;
+  background-color: transparent;
+  color: white;
+  border-width: 1px;
+  border-color: #fed92e;
+  border-radius: 50px;
+  font-family: "Poppins", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 15px;
+  line-height: 16px;
+  position: relative;
+  display: inline-block;
+}
+
+.btn-outline-warning-grs:hover {
+  background-color: #000000;
+  color: #fed92e;
+
+}
+
+.btn-outline-warning-kyt {
+  margin-left: 0.5rem;
+  width: 10vh;
+  height: 5vh;
+  background-color: transparent;
+  color: white;
+  border-width: 1px;
+  border-color: white;
+  border-radius: 50px;
+  font-family: "Poppins", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 15px;
+  line-height: 16px;
+  position: relative;
+  display: inline-block;
+
+}
+
+.btn-outline-warning-kyt:hover {
+  border-color: white;
+  background-color: #000000;
+  color: #fed92e;
+}
+
+.program-div {
+  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("https://wallpapercave.com/wp/wp4656532.jpg");
+  background-repeat: no-repeat;
+  background-position: center 0.5+px;
+  background-size: cover;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  /*   padding: 30px 30px 30px 30px; */
+  height: 100vh;
+  width: 100%;
+}
+
+.program-div h1 {
+  font-family: "Poppins", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+  font-weight: 800;
+  font-style: normal;
+  text-transform: none;
+  font-size: 35px;
+  line-height: 50px;
+  letter-spacing: -0.7px;
+  color: #fff;
+}
+
+.program-div-content {
+  display: flex;
+  margin-top: 1rem;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 10rem;
+}
+
+.item {
+  background-color: rgba(0, 0, 0, 0.64);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  flex-direction: column;
+  width: 17rem;
+  height: 47rem;
+  margin: 0 -25px;
+  flex-wrap: nowrap;
+  padding: 30px 30px 30px 30px;
+  position: relative;
+  z-index: 1;
+  border-radius: 10px;
+}
+
+.item h6 {
+  font-family: "Poppins", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+  font-weight: 600;
+  font-style: normal;
+  text-transform: none;
+  font-size: 16px;
+  text-align: center;
+  width: 100%;
+  line-height: 26px;
+  letter-spacing: 0;
+  color: #fff;
+
+}
+
+.item h2 {
+  font-family: "Poppins", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+  font-weight: 600;
+  font-style: normal;
+  text-transform: none;
+  font-size: 55px;
+  margin-top: 0.5rem;
+  line-height: 63px;
+  letter-spacing: -1px;
+
+  color: #fff;
+}
+
+.item p {
+  font-family: "Roboto", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  text-transform: none;
+  font-size: 16px;
+  line-height: 28px;
+  text-align: center;
+  width: 100%;
+  padding: 30px 30px 30px 30px;
+  letter-spacing: 0;
+  color: #999;
+}
+
+.item2 {
+  background-color: rgba(0, 0, 0, 0.64);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  flex-direction: column;
+  width: 17rem;
+  height: 47rem;
+  margin: 0 -25px;
+  flex-wrap: nowrap;
+  padding: 30px 30px 30px 30px;
+  position: relative;
+  z-index: 1;
+  border-radius: 10px;
+}
+
+.item2 h6 {
+  font-family: "Poppins", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+  font-weight: 600;
+  font-style: normal;
+  text-transform: none;
+  font-size: 16px;
+  text-align: center;
+  width: 100%;
+  line-height: 26px;
+  letter-spacing: 0;
+  color: #fff;
+
+}
+
+.item2 h2 {
+  font-family: "Poppins", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+  font-weight: 600;
+  font-style: normal;
+  text-transform: none;
+  font-size: 55px;
+  margin-top: 0.5rem;
+  line-height: 63px;
+  letter-spacing: -1px;
+
+  color: #fff;
+}
+
+.item2 p {
+  font-family: "Roboto", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  text-transform: none;
+  font-size: 16px;
+  line-height: 35.5px;
+  text-align: center;
+  width: 100%;
+  padding: 30px 30px 30px 30px;
+  letter-spacing: 0;
+  color: #999;
+}
+
+.item3 {
+  background-color: rgba(0, 0, 0, 0.64);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  flex-direction: column;
+  width: 17rem;
+  height: 47rem;
+  margin: 0 -25px;
+  flex-wrap: nowrap;
+  padding: 30px 30px 30px 30px;
+  position: relative;
+  z-index: 1;
+  border-radius: 10px;
+}
+
+.item3 h6 {
+  font-family: "Poppins", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+  font-weight: 600;
+  font-style: normal;
+  text-transform: none;
+  font-size: 16px;
+  text-align: center;
+  width: 100%;
+  line-height: 26px;
+  letter-spacing: 0;
+  color: #fff;
+
+}
+
+.item3 h2 {
+  font-family: "Poppins", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+  font-weight: 600;
+  font-style: normal;
+  text-transform: none;
+  font-size: 55px;
+  margin-top: 0.5rem;
+  line-height: 63px;
+  letter-spacing: -1px;
+
+  color: #fff;
+}
+
+.item3 p {
+  font-family: "Roboto", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  text-transform: none;
+  font-size: 16px;
+  line-height: 2.2rem;
+  text-align: center;
+  width: 100%;
+  padding: 30px 30px 30px 30px;
+  letter-spacing: 0;
+  color: #999;
+}
+
+.item4 {
+  background-color: rgba(0, 0, 0, 0.64);
+  display: -webkit-box;
+  border-color: #fed92e;
+  display: -ms-flexbox;
+  display: flex;
+  flex-direction: column;
+  width: 17rem;
+
+  margin: 0 -25px;
+  flex-wrap: nowrap;
+  padding: 30px 30px 30px 30px;
+  position: relative;
+  z-index: 1;
+  border-radius: 10px;
+}
+
+.item4 h6 {
+  font-family: "Poppins", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+  font-weight: 600;
+  font-style: normal;
+  text-transform: none;
+  font-size: 16px;
+  text-align: center;
+  width: 100%;
+  line-height: 26px;
+  letter-spacing: 0;
+  color: #fff;
+
+}
+
+.item4 h2 {
+  font-family: "Poppins", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+  font-weight: 600;
+  font-style: normal;
+  text-transform: none;
+  font-size: 55px;
+  margin-top: 0.5rem;
+  line-height: 63px;
+  letter-spacing: -1px;
+
+  color: #fff;
+}
+
+.item4 p {
+  font-family: "Roboto", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  text-transform: none;
+  font-size: 16px;
+  line-height: 28px;
+  text-align: center;
+  width: 100%;
+  padding: 30px 30px 30px 30px;
+  letter-spacing: 0;
+  color: #999;
+}
+
+
+.btn-outline-warning-detay {
+  margin-top: 2vh;
+  height: 5vh;
+  background-color: transparent;
   color: white;
+  border-width: 1px;
+  border-color: white;
+  border-radius: 50px;
+  font-family: "Poppins", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+  font-weight: 700;
+  font-size: 15px;
+  text-align: center;
 }
 
-.App-link {
-  color: #61dafb;
+.btn-outline-warning-detay:hover {
+  background-color: #000000;
+  color: #fed92e;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.footer-main {
+  width: 100%;
+  height: 30vh;
+  display: flex;
+  background-color: rgba(0, 0, 0, 1);
+}
+
+.in-footer{
+  display: flex;
+  flex-direction: row;
 }
